modify logs